--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ ADMIN_IDS=123456789,987654321
 MONGO_URL=mongodb://localhost:27017
 DB_NAME=telegram_file_bot
 
+FORCE_JOIN=true
+FORCE_JOIN_CHANNELS=-1001234567890,-1009876543210
+
 # Redis Cache
 REDIS_HOST=localhost
 REDIS_PORT=6379
